--- a/src/pages/finance/finance.styles.scss
+++ b/src/pages/finance/finance.styles.scss
@@ -1,7 +1,7 @@
 .finance-page{
     padding: 7rem 5rem 7rem 4rem;
 
-    @media screen and (max-width: 1026px) {
+    @media screen and (max-width: 1025px) {
         padding: 7rem 3rem 7rem 4rem;
     }
 
